# ORB-SLAM-SIFT

./: .dockerignore  .gitignore  CMakeLists.txt  DEBUGGING.md  DEBUGGING_V3.md  DEBUGGING_v2.md  Dockerfile.fullbuild  ORBSLAM3_SIFT_EPIPOLAR_BRIDGE_PLAN.md  SUMMARIZE.md  commad  notebooke35d2f8d67.ipynb
.claude/: settings.local.json
analyze/: asift_vs_sift_seq07_probe.cpp  cudasift_probe.cpp  export_lightglue_sift.py  kitti_ate.cpp  lightglue_precision_gt.py  lightglue_test.cpp  orbslam3_kitti_ate.cpp  orbslam3_sift_calibrate.cpp  orbslam3_visualize_keypoints.cpp  orbslam3_vlad_train.cpp  siftdbow_vs_vlad_seq07_probe.cpp  train_sift_dbow_vocabulary.cpp  verify_lightglue_onnx.py
kaggle/: CMakeLists.txt  cudasift_kaggle.ipynb  lightglue_kaggle.ipynb  pyslam_sift_kitti.ipynb  setup_and_run.sh  train_sift_dbow_vocabulary_kaggle.ipynb
scratchpad/: KITTI00-02-sift-nf15000.yaml  KITTI00-02-sift-nf7000.yaml  clahe_1000_KeyFrameTrajectory.txt  combo_1000_KeyFrameTrajectory.txt  gate1_1000_trial2_KeyFrameTrajectory.txt  gate1_2500_KeyFrameTrajectory.txt  kp_orb_final.png.csv  kp_sift_final.png.csv  lowgate_1000_KeyFrameTrajectory.txt  narrowwin_1000_KeyFrameTrajectory.txt  octree_1000_KeyFrameTrajectory.txt  orb_2500_KeyFrameTrajectory.txt  orb_outlier_1000_KeyFrameTrajectory.txt  prefix_hotzone_KeyFrameTrajectory.txt  ratiofix_1000_KeyFrameTrajectory.txt  sbpdiag_1000_KeyFrameTrajectory.txt  sbpdiag_orb_1000_KeyFrameTrajectory.txt  scalefix_1000_KeyFrameTrajectory.txt  scalefix_2500_KeyFrameTrajectory.txt  scalefix_hotzone_KeyFrameTrajectory.txt
settings_sift/: KITTI00-02-sift.yaml
src/: MainWindow.cpp  MainWindow.h  debug_main.cpp  main.cpp
src/vision/: CameraIntrinsics.h  EightPointLegacy.cpp  EightPointLegacy.h  FeatureDetector.cpp  FeatureDetector.h  GroundPlaneScale.cpp  GroundPlaneScale.h  ImuRotation.cpp  ImuRotation.h  LoopEstimateTypes.h  LoopEstimator.cpp  LoopEstimator.h  PnpSettings.h  PoseGraphOptimizer.cpp  PoseGraphOptimizer.h  SiftSettings.h  SlamWorker.cpp  SlamWorker.h  VideoSource.cpp  VideoSource.h  VladVocabulary.cc  VladVocabulary.h
src/widgets/: ControlPanel.cpp  ControlPanel.h  LoopEstimatePanel.cpp  LoopEstimatePanel.h  LoopMapThumbnail.cpp  LoopMapThumbnail.h  MapView.cpp  MapView.h  VideoView.cpp  VideoView.h
vocabulary_sift/: vlad_codebook_all.yml  vlad_codebook_all_rootsift.yml  vlad_codebook_seq00.yml
weights/: lightglue_sift.onnx
